[package]
name = "bioinformatics-toolkit"
version = "0.0.3"
description = "A Tauri App for Local Bioinformatic tools"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bioinformaticstoolkit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]


[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
tauri = { version = "2.0.3", features = [] }
tauri-plugin-shell = "2.0.1"
tauri-plugin-dialog = "2.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
noodles-fasta = "0.41.0"
bio = "2.0.3"
noodles-fastq = "0.13.0"
rnapkin = "0.3.9"
protein-translate = "0.2.0"

[dev-dependencies]
tempfile = "3.13.0"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
